JSON para CSV a funcionar